Fix serialization issues for rescheduling tasks.